src/test/deca/context/valid/inheritance/extends_object_simple.deca
// Description :
//    Classe étendant implicitement Object.
//
// Resultats :
//    OK

class A {
    int x;
}

{
}

